<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="60sp"
        android:layout_marginTop="60sp"
        android:textColor="@color/new_on_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="80sp"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        app:layout_constraintLeft_toLeftOf="@+id/question_set_manager_button"
        app:layout_constraintRight_toRightOf="@+id/question_set_manager_button"/>

    <Button
        android:id="@+id/question_set_manager_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_question_set"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/exit_program_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_marginTop="40sp"
        app:layout_constraintTop_toBottomOf="@+id/question_set_manager_button"
        app:layout_constraintLeft_toLeftOf="@+id/question_set_manager_button"
        app:layout_constraintRight_toRightOf="@+id/question_set_manager_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>