<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background"
    tools:context=".view.fragments.QuestionAddEditFragment">

    <EditText
        android:id="@+id/add_word_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:autofillHints="@string/new_word"
        android:hint="@string/new_word"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/new_on_primary"
        android:textColorHint="@color/new_on_primary"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_translation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:autofillHints="@string/new_translation"
        android:hint="@string/new_translation"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/new_on_primary"
        android:textColorHint="@color/new_on_primary"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_word_edit_text" />

    <EditText
        android:id="@+id/add_category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:autofillHints="@string/new_category"
        android:hint="@string/new_category"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/new_on_primary"
        android:textColorHint="@color/new_on_primary"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_translation_edit_text" />


    <Button
        android:id="@+id/add_word_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_category_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>