<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background"
    tools:context=".view.fragments.QuizFragment">

    <TextView
        android:id="@+id/quiz_text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/what_does_it_mean"
        android:textColor="@color/new_on_background"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quiz_question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/question_dummy"
        android:textAlignment="center"
        android:textColor="@color/new_on_background"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_text_view_1" />

    <Button
        android:id="@+id/quiz_button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_dummy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/quiz_button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_dummy"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/quiz_button_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/quiz_button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_dummy"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/quiz_button_two"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/quiz_button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_dummy"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/quiz_button_three"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>